# InterpreterDesignPatter

./: CMakeLists.txt  README.md  main.cpp  run.sh
interpreters/: Manager.cpp  Manager.h
interpreters/VariableStore/: Variable.cpp  Variable.h  VariableStore.cpp  VariableStore.h
interpreters/contexts/: AddContext.cpp  AddContext.h  ConcatContext.cpp  ConcatContext.h  Context.h  DeleteContext.cpp  DeleteContext.h  MinusContext.cpp  MinusContext.h  NewInstanceContext.cpp  NewInstanceContext.h  NoopContext.cpp  NoopContext.h  ShowAction.cpp  ShowAction.h  ShowContext.cpp  ShowContext.h
interpreters/expression/: ActionExpression.cpp  ActionExpression.h  Expression.h  IdentifierExpression.cpp  IdentifierExpression.h  ValueExpression.cpp  ValueExpression.h  VoidExpression.cpp  VoidExpression.h
interpreters/interpreters/: Interpreter.h
utils/: DefaultException.cpp  DefaultException.h  ExpressionUtils.cpp  ExpressionUtils.h  utils.cpp  utils.h
